# cookiecutter-python-conda

./: .gitignore  .travis.yml  LICENSE  README.md  cookiecutter.json  pyproject.toml
.github/workflows/: test.yml
dev/: environment-dev.yaml
hooks/: post_gen_project.py  pre_gen_project.py
tests/: test_template.py
{{cookiecutter.package_name}}/: .bumpversion  .bumpversion.cfg  .travis.yml
{{cookiecutter.package_name}}/conda-recipe/: meta.yaml
{{cookiecutter.package_name}}/dev/: environment-dev.yaml
{{cookiecutter.package_name}}/src/{{cookiecutter.package_name}}/: __init__.py  __main__.py
{{cookiecutter.repo_name}}/: .bumpversion.cfg  .travis.yml  README.md  pyproject.toml  setup.py
{{cookiecutter.repo_name}}/conda-recipe/: meta.yaml
{{cookiecutter.repo_name}}/dev/: README.md  environment-dev.yaml
