[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "{{ cookiecutter.package_name }}"
version = "{{ cookiecutter.project_initial_version }}"
authors = [
  {name = "{{ cookiecutter.author_name }}", email = "{{ cookiecutter.author_email }}"}
]
maintainers = [
  {name = "{{ cookiecutter.author_name }}", email = "{{ cookiecutter.author_email }}"}
]
description = "{{ cookiecutter.project_short_description }}"
readme = "README.md"
license = "MIT"

dependencies = [
  # 'dep1>=1.0,<2',
  # 'dep2>=2'
]


[project.scripts]
{{ cookiecutter.package_name }} = "{{ cookiecutter.package_name }}.__main__:main"


[tool.black]
line-length = 120
target-version = ['py37']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs
    | \.git
    | \.mypy_cache
    | \.tox
    | _build
    | build
    | dist
  )/
)
'''
